<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Enter Your Username</string>
    <string name="action_search">Search</string>
    <string name="No_Text">NO TEXT</string>
    <string name="No_Pass">NO PASSWORD</string>
    <string name="Password">Enter Your Password</string>
    <string name="button_send">Sign In</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_act1">Welcome, What would you like to do now?</string>
    <string name="opt1">Calculator</string>
    <string name="opt2">Email</string>
    <string name="opt3">Gallery</string>
    <string name="opt4">File Manager</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="divide">/</string>
    <string name="multiply">X</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="decimal">.</string>
    <string name="title_activity_display_message">MyMessage</string>
    <string name="title_activity_calculator">Calculator</string>

</resources>
