<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#000000"
        android:hint="@string/username"/>
    <TextView
        android:id="@+id/No_text"
        android:text="@string/No_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff0800"
        android:visibility="gone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/Password"
        android:password="true"
        android:textColor="#000000"
        android:id="@+id/password"
        />
    <TextView
        android:id="@+id/No_Pass"
        android:text="@string/No_Pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff0800"
        android:visibility="gone"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:text="@string/button_send"
        android:onClick="sendMessage"
        />
</LinearLayout>
