<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.newapp.www.newapp.DisplayMessageActivity"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/welcome_act1"
        android:text="@string/welcome_act1"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:text="@string/opt1"
            android:id="@+id/opt1"
            android:onClick="onOpt1"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:text="@string/opt2"
            android:onClick="onOpt2"
            android:id="@+id/opt2"
            android:layout_weight="0.5" />
    </LinearLayout>
<LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:layout_weight="0"
    android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/opt3"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:onClick="onOpt3"
            android:id="@+id/opt3"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:text="@string/opt4"
            android:onClick="onOpt4"
            android:id="@+id/opt4"
            android:layout_weight="0.5" />
    </LinearLayout>


</LinearLayout>
